# maco

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  UPGRADING.md  docker-compose.yml  memory.db
.github/workflows/: ci.yml
crates/maco-core/: Cargo.toml
crates/maco-core/src/: config.rs  error.rs  git_worktree.rs  lib.rs  model_config.rs  redact.rs  types.rs  workspace.rs
crates/maco-db/: Cargo.toml
crates/maco-db/src/: lib.rs  pool.rs
crates/maco-db/src/repos/: api_token.rs  artifact.rs  callback_log.rs  elicitation.rs  job.rs  mcp_server.rs  mod.rs  model.rs  react.rs  run.rs  run_event.rs  session_meta.rs  settings.rs  skill.rs  sub_agent_run.rs  tool_policy.rs  usage.rs
crates/maco-governance/: Cargo.toml
crates/maco-governance/src/: artifact.rs  auth.rs  guardrail.rs  hitl.rs  lib.rs  usage.rs
crates/maco-harness/: Cargo.toml
crates/maco-harness/examples/: run_spike.rs
crates/maco-harness/src/: adk_skills.rs  artifact_capture.rs  callbacks.rs  compaction.rs  elicitation.rs  filesystem_mcp.rs  force_unary_llm.rs  harness.rs  hitl.rs  lib.rs  mcp_pool.rs  model_activity.rs  model_factory.rs  orchestrator.rs  run_stream.rs  session_context.rs  shell.rs  skill_coordinator.rs  skill_install.rs  skills.rs  sub_agent.rs  tool_concurrency.rs  usage.rs
crates/maco-react/: Cargo.toml
crates/maco-react/src/: lib.rs  tools.rs
crates/maco-server/: Cargo.toml
crates/maco-server/src/: artifact_routes.rs  auth.rs  auth_token_routes.rs  chat_routes.rs  directory_picker.rs  export.rs  job_routes.rs  main.rs  mcp_routes.rs  memory_routes.rs  model_routes.rs  models_api.rs  openapi.rs  routes.rs  run_routes.rs  session_facade.rs  session_meta_view.rs  session_routes.rs  skill_routes.rs  skills_sync.rs  state.rs  system_routes.rs  tool_policy_routes.rs  usage_routes.rs  worker.rs
crates/maco-storage/: Cargo.toml
crates/maco-storage/src/: artifacts.rs  lib.rs  memory_admin.rs
crates/maco-telemetry/: Cargo.toml
crates/maco-telemetry/src/: callback_logger.rs  lib.rs  tracing_init.rs
docker/: entrypoint.sh
docs/: spike-report.md
docs/superpowers/plans/: 2026-06-12-react-sub-agent.md  2026-06-13-service-architecture-risk-fixes.md
docs/superpowers/specs/: 2026-06-12-react-sub-agent-design.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: AgentPermissionSelector.tsx  ArtifactPreviewContent.tsx  ArtifactPreviewModal.tsx  ChatMessageContent.tsx  ChatMessageItem.tsx  ChatMessagesPanel.tsx  ChatSessionSidebar.tsx  ConfirmDialog.tsx  ElicitationModal.tsx  GitWorktreeToolbarControl.tsx  HitlConfirmModal.tsx  Icons.tsx  LazyPanelBoundary.tsx  McpSettings.tsx  ModelSettings.tsx  RunStatusBar.tsx  SessionProjectBar.tsx  SkillsPanel.tsx  SubAgentLane.tsx  TasksDock.tsx  TasksDockSkeleton.tsx  ToolPolicySettings.tsx  markdownComponents.tsx
frontend/src/hooks/: useConfirmDialog.tsx  useRunStreamState.ts  useStreamingAssistantBuffer.ts  useTasksDockWidth.ts  useToolPanelData.ts
frontend/src/store/: chat.ts
frontend/src/styles/: app.css  markdown.css
frontend/src/types/: sse.ts  subAgentActivity.ts
frontend/src/utils/: normalizeMarkdown.ts  planMarkdown.ts  sseDispatcher.ts
migrations/: 001_initial_schema.sql  002_phase2_governance.sql  003_session_project_root.sql  004_agent_permission_mode.sql  005_git_worktree.sql  006_sub_agent_runs.sql  007_run_events.sql  008_run_events_created_at_index.sql
patches/adk-anthropic/: .cargo_vcs_info.json  Cargo.toml
patches/adk-anthropic/src/: client.rs
scripts/: init.sh
