[workspace]
resolver = "2"
members = [
    "crates/maco-core",
    "crates/maco-db",
    "crates/maco-storage",
    "crates/maco-harness",
    "crates/maco-react",
    "crates/maco-telemetry",
    "crates/maco-governance",
    "crates/maco-server",
]
default-members = ["crates/maco-server"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
adk-rust = { version = "=1.0.0", features = ["standard", "sqlite-memory"] }
adk-session = { version = "=1.0.0", features = ["sqlite"] }
adk-memory = { version = "=1.0.0", features = ["sqlite-memory"] }
adk-runner = { version = "=1.0.0" }
adk-core = { version = "=1.0.0" }
adk-tool = { version = "=1.0.0", features = ["mcp"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"

maco-core = { path = "crates/maco-core" }
maco-db = { path = "crates/maco-db" }
maco-storage = { path = "crates/maco-storage" }
maco-harness = { path = "crates/maco-harness" }
maco-react = { path = "crates/maco-react" }
maco-telemetry = { path = "crates/maco-telemetry" }
maco-governance = { path = "crates/maco-governance" }
maco-server = { path = "crates/maco-server" }
