[package]
name = "maco-core"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
