[package]
name = "maco-governance"
edition.workspace = true
version.workspace = true

[dependencies]
maco-core = { workspace = true }
maco-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
adk-guardrail = "=1.0.0"
