[package]
name = "maco-harness"
edition.workspace = true
version.workspace = true

[[example]]
name = "run_spike"
path = "examples/run_spike.rs"

[dependencies]
maco-core = { workspace = true }
maco-db = { workspace = true }
maco-storage = { workspace = true }
maco-react = { workspace = true }
maco-governance = { workspace = true }
maco-telemetry = { workspace = true }
adk-rust = { workspace = true }
adk-agent = { version = "=1.0.0", features = ["guardrails", "skills"] }
adk-skill = { version = "=1.0.0" }
adk-session = { workspace = true }
adk-memory = { workspace = true }
adk-runner = { workspace = true, features = ["context-compaction", "artifacts"] }
adk-core = { workspace = true }
adk-tool = { workspace = true }
rmcp = { version = "1.6", default-features = false, features = ["client"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
zip = { workspace = true }
tempfile = "3"
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { workspace = true }
