[package]
name = "maco-server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "maco-server"
path = "src/main.rs"

[dependencies]
maco-core = { workspace = true }
maco-db = { workspace = true }
maco-storage = { workspace = true }
maco-harness = { workspace = true }
maco-react = { workspace = true }
maco-telemetry = { workspace = true }
maco-governance = { workspace = true }
adk-rust = { workspace = true }
adk-session = { workspace = true }
adk-core = { workspace = true }
adk-memory = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
rfd = { workspace = true, optional = true }

[features]
default = ["native-dialog"]
# 本机文件夹选择器（Linux/Windows）；Docker 部署请 `--no-default-features`
native-dialog = ["dep:rfd"]
